--- a/WDL/swell/Makefile.libSwell
+++ b/WDL/swell/Makefile.libSwell
@@ -24,7 +24,7 @@ EXTRA_OBJS =
 
 vpath %.cpp .. ../lice 
 
-SWELL_OBJS = swell.o swell-ini.o swell-miscdlg-generic.o swell-wnd-generic.o swell-menu-generic.o swell-kb-generic.o swell-dlg-generic.o \
+SWELL_OBJS = swell.o swell-ini.o swell-miscdlg-gtk.o swell-wnd-generic.o swell-menu-generic.o swell-kb-generic.o swell-dlg-generic.o \
              swell-gdi-generic.o swell-misc-generic.o swell-appstub-generic.o swell-modstub-generic.o swell-gdi-lice.o
 
 LICE_OBJS = lice.o  lice_arc.o lice_colorspace.o lice_image.o lice_jpg.o lice_line.o lice_pcx.o lice_png.o lice_texgen.o lice_text.o \
@@ -33,11 +33,19 @@ LICE_OBJS = lice.o  lice_arc.o lice_colorspace.o lice_image.o lice_jpg.o lice_li
 OBJS = $(SWELL_OBJS)
 
 ifndef NOGDK
+ifdef GTK2
+GDK_CFLAGS = -DSWELL_TARGET_GDK $(shell pkg-config --cflags gdk-2.0 gtk+-2.0) -DSWELL_LICE_GDI -DGTK2
+CFLAGS += $(GDK_CFLAGS)
+CXXFLAGS += $(GDK_CFLAGS)
+LINKEXTRA += $(shell pkg-config --libs gdk-2.0 gtk+-2.0)
+OBJS += $(LICE_OBJS)
+else
 GDK_CFLAGS = -DSWELL_TARGET_GDK $(shell pkg-config --cflags gdk-3.0 gtk+-3.0) -DSWELL_LICE_GDI
 CFLAGS += $(GDK_CFLAGS)
 CXXFLAGS += $(GDK_CFLAGS)
 LINKEXTRA += $(shell pkg-config --libs gdk-3.0 gtk+-3.0)
 OBJS += $(LICE_OBJS)
+endif
 endif
 
 
